--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,18 +15,38 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
-    "no-use-before-define": "off",
+    "no-underscore-dangle": "off",
+    "prettier/prettier": ["error"],
+    "class-methods-use-this": "off",
+    "@typescript-eslint/camelcase": "off",
+    "no-useless-constructor": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
+    "no-use-before-define": "off",
     "camelcase": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "_"
+      }
+    ],
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
       {
         "ts": "never"
       }
-    ],
-    "prettier/prettier": ["error", { "singleQuote": true, "parser": "flow" }],
-    "class-methods-use-this": "off"
+    ]
   },
   "settings": {
     "import/resolver": {
